# centralized_inverse_kinematics

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/conf/: FZMP.txt  Fbalance.txt  Ffull.txt  Fzmp2.txt  Gd.txt  centralized_inverse_kinematics_coman_config.ini  centralized_inverse_kinematics_hydra_config.ini  centralized_inverse_kinematics_initial_config.ini  invGFull.txt  invGZMP.txt  invGbalance.txt  invGfull.txt  invGzmp2.txt  invHZMP.txt  invHbalance.txt  invHfull.txt  invHzmp2.txt
include/: IntegralControl.h  MatrixVector.h  ZMPStabilizer.h  centralized_inverse_kinematics_constants.h  centralized_inverse_kinematics_module.hpp  centralized_inverse_kinematics_thread.h  comStabilizer.h  general_ik_problem.h  invertedPendulum.h  mpcClass.h  openSoTServer.h  previewClass.h  walkTrajectories.h  zmpgenerator.h
include/problems/: interaction_problem.h  simple_problem.h  the_dying_swan_problem.h  walking_problem.h  wb_manip_problem.h
launch/: bigman_phantom.launch  drc_valve_interactive_markers.launch  the_dying_swan_marker.launch
python/: postural.py  wall.py
src/: FilterHClass.cpp  MatrixVector.cpp  ZMPStabilizer.cpp  centralized_inverse_kinematics_main.cpp  centralized_inverse_kinematics_thread.cpp  comStabilizer.cpp  integralControl.cpp  invertedPendulum.cpp  mpcClass.cpp  openSoTServer.cpp  previewClass.cpp  walkTrajectories.cpp  zmpgenerator.cpp
src/problems/: interaction_problem.cpp  simple_problem.cpp  the_dying_swan_problem.cpp  walking_problem.cpp  wb_manip_problem.cpp
